# GSM

./: .gitignore  CMakeLists.txt  README.md
include/: evaluator.h  parser.h  table.h
src/: evaluator.c  main.c  parser.c  table.c
tests/: test_circular.csv  test_errors.csv  test_neg.csv
